--- a/css/styles.css
+++ b/css/styles.css
@@ -33,3 +33,110 @@ body {
     float: right;
     margin-right: 4rem;
 }
+
+/*Gallery*/
+/*@import url('https://fonts.googleapis.com/css?family=Lobster');*/
+
+
+
+/* Gallery */
+
+.gallery {
+    position: relative;
+    width: 100%;
+    max-width: 1000px;
+}
+
+.gallery h1 {
+    display: inline-block;
+    font-size: 2.2em;
+    padding: 10px;
+    color: #333;
+}
+.gallery ol {
+    list-style: none;
+    width: inherit;
+}
+.gallery li {
+    position: relative;
+    width: inherit;
+    height: 300px;
+    background-repeat: no-repeat;
+    background-position: 50% 50%;
+    background-size: cover;
+    margin: 0px;
+}
+
+.gallery li:nth-child(1) {
+    background-image: url(https://visualhunt.com/photos/m/8/she-walks-with-tigers.jpg);   
+}
+.gallery li:nth-child(2) {
+    background-image: url(https://visualhunt.com/photos/xl/2/king-melt.jpg);
+}
+.gallery li:nth-child(3) {
+    background-image: url(https://visualhunt.com/photos/m/8/slowatcoffee.jpg);
+}
+.gallery li:nth-child(4) {
+    background-image: url(https://visualhunt.com/photos/m/8/3mousses-p17.jpg);
+}
+.gallery li:nth-child(5) {
+    background-image: url(https://visualhunt.com/photos/m/2/monster-soup.jpg);  
+}
+
+.gallery a {
+    position: relative;
+    display: block;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.2);
+}
+.info {
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    padding: 10px 15px;
+    color: #fff;
+    text-shadow: 0 0 5px rgba(0, 0, 0, 0.9);
+}
+.info h3 {
+    font-size: 2em;
+}
+.info p {
+    font-size: 0.9em;
+}
+
+
+@media screen and (min-width: 420px) {
+    .gallery li {
+        height: 400px;
+        width: 50%;
+    }
+}
+
+
+@media screen and (min-width: 620px) {
+    .gallery li {
+        float: left;
+        width: 50%;
+    }
+}
+
+
+@media screen and (min-width: 800px) {
+    
+    .gallery li:hover {
+        -webkit-transform: scale(1.1);
+        transform: scale(1.1);
+        z-index: 5;
+    }
+    .gallery a {
+        -webkit-transition: background-color 500ms ease;
+        transition: background-color 500ms ease;
+    }
+    .gallery a:hover {
+        background-color: rgba(0, 0, 0, 0);
+    }
+    .info h3 {
+        font-size: 1.2em;
+    }
+}*/
