--- a/css/styles.css
+++ b/css/styles.css
@@ -1,6 +1,5 @@
 body {
     font-family: 'Raleway', sans-serif;
-    font-weight: 300 !important;
 }
 
 .bold{
@@ -56,6 +55,7 @@ body {
 .gallery ol {
     list-style: none;
     width: inherit;
+    padding: 0px;
 }
 .gallery li {
     position: relative;
@@ -64,7 +64,6 @@ body {
     background-repeat: no-repeat;
     background-position: 50% 50%;
     background-size: cover;
-    margin: 0px;
 }
 
 .gallery li:nth-child(1) {
@@ -95,8 +94,7 @@ body {
     bottom: 0;
     left: 0;
     padding: 10px 15px;
-    color: #fff;
-    text-shadow: 0 0 5px rgba(0, 0, 0, 0.9);
+    color: #ffffff;
 }
 .info h3 {
     font-size: 2em;
@@ -105,18 +103,10 @@ body {
     font-size: 0.9em;
 }
 
-
-@media screen and (min-width: 420px) {
-    .gallery li {
-        height: 400px;
-        width: 50%;
-    }
-}
-
-
 @media screen and (min-width: 620px) {
     .gallery li {
         float: left;
+        height: 400px;
         width: 50%;
     }
 }
