--- a/css/styles.css
+++ b/css/styles.css
@@ -28,7 +28,7 @@ body {
     color: #FFFFFF;
 }
 
-.right {
+.typewriter-text-align {
     float: right;
     margin-right: 4rem;
 }
@@ -42,7 +42,7 @@ body {
     /*border: none;*/
 }
 
-.nav-item{
+.nav-item {
     text-align: center;
 }
 
@@ -124,6 +124,34 @@ body {
 .info p {
     font-size: 0.9em;
 }
+
+.logo_image {
+    display: inline;
+}
+
+
+@media screen and (max-width: 846px) {
+    .logo_image {
+        display: none;
+    }
+
+    .typewriter-text-align {
+        text-align: center;
+        width: 100%;
+        margin: auto !important;
+        margin-top: 100px !important;
+    }
+    .typewriter-text-align h1, h2{
+        font-size: 2em;
+    }
+    .resize_box{
+        height: 400px;
+    }
+    h4{
+        font-size: 1em;
+    }
+}
+
 
 @media screen and (min-width: 620px) {
     .gallery li {
