--- a/css/styles.css
+++ b/css/styles.css
@@ -96,28 +96,34 @@ body {
 }
 
 .gallery li:nth-child(1) {
+    background-image: url(../img/uniwheel.png);
+    /*background-size: 120%;*/
+    /*background-position: 0px;*/
+}
+
+.gallery li:nth-child(2) {
     background-image: url(https://cdn.instructables.com/FAD/IY6Y/JIOUEE5Y/FADIY6YJIOUEE5Y.LARGE.jpg?auto=webp&frame=1&width=1024&height=1024&fit=bounds);
     /*background-size: 120%;*/
     background-position: 0px;
 }
 
-.gallery li:nth-child(2) {
+.gallery li:nth-child(3) {
     background-image: url(https://cdn.instructables.com/FBS/E9JH/IVO3IEIL/FBSE9JHIVO3IEIL.LARGE.jpg?auto=webp&frame=1&width=1024&height=1024&fit=bounds);
 	/*background-size: 120%;*/
 	background-position: 0px;
 }
 
-.gallery li:nth-child(3) {
+.gallery li:nth-child(4) {
     background-image: url(https://cdn.instructables.com/FKR/WDS9/IEKJ6FY2/FKRWDS9IEKJ6FY2.LARGE.jpg?auto=webp&frame=1&width=1024&height=1024&fit=bounds);
 }
 
-.gallery li:nth-child(4) {
+.gallery li:nth-child(5) {
     background-image: url(https://cdn.instructables.com/FKJ/2FGA/I78VRH2R/FKJ2FGAI78VRH2R.LARGE.jpg?auto=webp&frame=1&width=1024&height=1024&fit=bounds);
     background-position: 0px;
 
 }
 
-.gallery li:nth-child(5) {
+.gallery li:nth-child(6) {
     background-image: url(https://cdn.instructables.com/FVY/TO7U/IHZ4SHA9/FVYTO7UIHZ4SHA9.LARGE.jpg?auto=webp&frame=1&width=1024&height=1024&fit=bounds);
     background-position: 0px;
 }
