--- a/css/styles.css
+++ b/css/styles.css
@@ -110,7 +110,7 @@ body {
 .gallery li:nth-child(2) {
     background-image: url(../img/unicycle_app.png);
     /*background-position: 0px;*/
-    background-size: 60%;
+    /*background-size: 60%;*/
 }
 
 .gallery li:nth-child(3) {
