--- a/css/styles.css
+++ b/css/styles.css
@@ -214,13 +214,13 @@ body {
     }
 
     .gallery li:nth-child(2) {
-        background-image: url(../img/unicycle_app.png);
+        background-image: url(https://raw.githubusercontent.com/ChitlangeSahas/ChitlangeSahas.github.io/master/img/unicycle_app.png);
         /*background-position: 0px;*/
         background-size: 80%;
     }
 
     .gallery li:nth-child(1) {
-    background-image: url(../img/uniwheel.png);
+    background-image: url(https://raw.githubusercontent.com/ChitlangeSahas/ChitlangeSahas.github.io/master/img/uniwheel.png);
     background-size: 85%;
     /*background-position: 0px;*/
 }
