--- a/css/styles.css
+++ b/css/styles.css
@@ -153,7 +153,7 @@ body {
     display: block;
     width: 100%;
     height: 100%;
-    background-color: rgba(0, 0, 0, 0.2);
+    /*background-color: rgba(0, 0, 0, 0.2);*/
 }
 
 .info {
