hover thing works

--- a/css/styles.css
+++ b/css/styles.css
@@ -141,7 +141,7 @@ body {
 .info {
     position: absolute;
     top: 0;
-    padding: 10px 15px;
+    padding: 15px;
     color: black;
 }
 
@@ -223,6 +223,13 @@ body {
         bottom: 0;
         right: 0;
         background-color: black;
+    }
+
+    .bottom_left {
+        position: absolute;
+        bottom: 0;
+        left: 0;
+        margin: 10px 15px;
     }
 
     .gallery li:hover .show_on_hover {
