--- a/css/styles.css
+++ b/css/styles.css
@@ -39,7 +39,6 @@ body {
 
 .no_border_button {
     cursor: pointer;
-    /*border: none;*/
 }
 
 .nav-item {
@@ -64,13 +63,37 @@ body {
     height: 550px;
 }
 
-/*Gallery*/
-/*@import url('https://fonts.googleapis.com/css?family=Lobster');*/
+.tooltip {
+    position: relative;
+    display: inline-block;
+    border-bottom: 1px dotted black;
+}
 
+.tooltip .tooltiptext {
+    visibility: hidden;
+    width: 120px;
+    background-color: black;
+    color: #fff;
+    text-align: center;
+    border-radius: 6px;
+    padding: 5px 0;
+    position: absolute;
+    z-index: 1;
+    bottom: 100%;
+    left: 50%;
+    margin-left: -60px;
 
+    /* Fade in tooltip - takes 1 second to go from 0% to 100% opac: */
+    opacity: 0;
+    transition: opacity 1s;
+}
+
+.tooltip:hover .tooltiptext {
+    visibility: visible;
+    opacity: 1;
+}
 
 /* Gallery */
-
 .gallery {
     position: relative;
     width: 100%;
@@ -99,17 +122,13 @@ body {
     background-size: cover;
 }
 
-
-
 .gallery li:nth-child(1) {
     background-image: url(https://raw.githubusercontent.com/ChitlangeSahas/ChitlangeSahas.github.io/master/img/uniwheel.png);
     background-size: 75%;
-    /*background-position: 0px;*/
 }
 
 .gallery li:nth-child(2) {
     background-image: url(https://raw.githubusercontent.com/ChitlangeSahas/ChitlangeSahas.github.io/master/img/unicycle_app.png);
-    /*background-position: 0px;*/
     background-size: 70%;
 }
 
@@ -118,16 +137,12 @@ body {
     background-position: 0px;
 }
 
-
 .gallery li:nth-child(4) {
     background-image: url(https://cdn.instructables.com/FAD/IY6Y/JIOUEE5Y/FADIY6YJIOUEE5Y.LARGE.jpg?auto=webp&frame=1&width=1024&height=1024&fit=bounds);
-    /*background-size: 120%;*/
-    /*background-position: -40px;*/
 }
 
 .gallery li:nth-child(5) {
     background-image: url(https://cdn.instructables.com/FBS/E9JH/IVO3IEIL/FBSE9JHIVO3IEIL.LARGE.jpg?auto=webp&frame=1&width=1024&height=1024&fit=bounds);
-    /*background-size: 120%;*/
     background-position: 0px;
 }
 
@@ -146,22 +161,18 @@ body {
     background-position: 0px;
 }
 
-
-
 .gallery a {
     position: relative;
     display: block;
     width: 100%;
     height: 100%;
-    /*background-color: rgba(0, 0, 0, 0.2);*/
 }
 
 .info {
     position: absolute;
-    bottom: 0;
-    padding: 10px 15px;
-    0 auto;
-    color: #ffffff;
+    top: 0;
+    padding: 15px;
+    color: black;
 }
 
 .info h3 {
@@ -175,7 +186,6 @@ body {
 .logo_image {
     display: inline;
 }
-
 
 @media screen and (max-width: 846px) {
     .logo_image {
@@ -197,8 +207,6 @@ body {
     .resize_box {
         height: 400px;
     }
-
-
 }
 
 
@@ -215,41 +223,50 @@ body {
 
     .gallery li:nth-child(2) {
         background-image: url(https://raw.githubusercontent.com/ChitlangeSahas/ChitlangeSahas.github.io/master/img/unicycle_app.png);
-        /*background-position: 0px;*/
         background-size: 80%;
     }
 
     .gallery li:nth-child(1) {
-    background-image: url(https://raw.githubusercontent.com/ChitlangeSahas/ChitlangeSahas.github.io/master/img/uniwheel.png);
-    background-size: 85%;
-    /*background-position: 0px;*/
+        background-image: url(https://raw.githubusercontent.com/ChitlangeSahas/ChitlangeSahas.github.io/master/img/uniwheel.png);
+        background-size: 85%;
+    }
 }
-}
-
-
-
 
 @media screen and (min-width: 800px) {
 
-    .gallery li:hover {
-        /*Lift up effect*/
-        -webkit-transform: scale(1.1);
-        transform: scale(1.1);
-        z-index: 5;
+    .show_on_hover {
+        width: 85%;
+        height: 85%;
+        background-color: white;
+        border-style: solid;
+        border-color: black;
+
+        display: none;
+        position: relative;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
     }
 
-    .gallery a {
-        -webkit-transition: background-color 500ms ease;
-        transition: background-color 500ms ease;
+    .bottom_right {
+        position: absolute;
+        bottom: 0;
+        right: 0;
+        background-color: black;
     }
 
-    .gallery a:hover {
-        background-color: rgba(0, 0, 0, 0);
+    .bottom_left {
+        position: absolute;
+        bottom: 0;
+        left: 0;
+        margin: 10px 15px;
+    }
+
+    .gallery li:hover .show_on_hover {
+        display: block;
     }
 
     .info h3 {
-        font-size: 1.2em;
+        font-size: 1.8em;
     }
 }
-
-*/
