--- a/css/styles.css
+++ b/css/styles.css
@@ -136,6 +136,10 @@ body {
     background-repeat: no-repeat;
     background-position: 50% 50%;
     background-size: cover;
+    /*border-top: 10px solid #ffffff;*/
+    border-right:  5px solid #ffffff;
+    border-left:   5px solid #ffffff;
+    border-bottom: 10px solid #ffffff;
 }
 
 .gallery li:nth-child(1) {
