--- a/css/styles.css
+++ b/css/styles.css
@@ -136,9 +136,6 @@ body {
     background-repeat: no-repeat;
     background-position: 50% 50%;
     background-size: cover;
-    border-right:  5px solid #ffffff;
-    border-left:   5px solid #ffffff;
-    border-bottom: 10px solid #ffffff;
 }
 
 .gallery li:nth-child(1) {
@@ -286,5 +283,11 @@ body {
 
     .info h3 {
         font-size: 1.8em;
+    }
+
+    .gallery li {
+        border-right: 5px solid #ffffff;
+        border-left: 5px solid #ffffff;
+        border-bottom: 10px solid #ffffff;
     }
 }
