--- a/css/styles.css
+++ b/css/styles.css
@@ -108,6 +108,17 @@ body {
     transform: translate(-50%, -50%);
 }
 
+/*Responsive, stacks the columns on top of each other instead of size to side.*/
+@media screen and (max-width: 600px) {
+    .left {
+        width: 100%;
+    }
+
+    .right {
+        width: 100%;
+    }
+}
+
 
 /* Gallery */
 .gallery {
@@ -201,6 +212,10 @@ body {
 
 .logo_image {
     display: inline;
+}
+
+.project_title {
+    margin-top: 30px;
 }
 
 @media screen and (max-width: 846px) {
@@ -303,5 +318,9 @@ body {
         top: 50%;
         left: 50%;
         transform: translate(-50%, -50%);
+    }
+
+    .project_title {
+        margin-top: 0px;
     }
 }
