--- a/css/styles.css
+++ b/css/styles.css
@@ -50,14 +50,15 @@ body {
     display: block;
     margin-left: auto;
     margin-right: auto;
-    width: 50%;
+    width: 100%;
+    max-width: 700px;
 }
 
 .center-text {
     display: block;
     margin-left: auto;
     margin-right: auto;
-    width: 70%;
+    /*width: 70%;*/
 }
 
 .pdf_resume {
